--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         height: 90vh;
         background-image: url("./assets/images/wave.png");
         background-repeat: no-repeat;
-        background-position-x: 70px;
+        background-position-x: 0px;
         background-position-y: 155px;
         background-size: cover;
       }
@@ -134,7 +134,7 @@
       </button>
     </div>
 
-    <div class="home flex">
+    <section class="home flex">
       <div class="name md:w-3/5 flex flex-col md:py-16 md:px-24 py-8 px-8">
         <div class="headline font-bold">
           Welcome to Suspol Technologies Pvt.Ltd.
@@ -154,72 +154,208 @@
           Learn More
         </button>
       </div>
-    </div>
+    </section>
 
-    <!-- <div class="Aboutsection">
-<div class="About">
-	<div class="Aboutheader">
-		<span><h4>ABOUT</h4></span>
-	</div>
-	<div class="Aboutcontentheader">
-	<h3><b>About Suspol Technologies Pvt. Ltd.
-	<br> Empowering Change Through Innovation</b></h3>
-</div>
-<div class="Aboutcontentpart">
-<span>Suspol Technologies Pvt. Ltd. is a registered startup in India, recognized by Startup India and DPIIT. Founded by Mr. Mriganka Saha and Mrs. Pallavi Wahane, our company is dedicated to developing sustainable technologies for industrial waste management.</span>
+    <section
+      class="flex items-center bg-stone-100 xl:h-screen font-poppins dark:bg-gray-800 mt-16"
+    >
+      <div class="justify-center flex-1 max-w-6xl py-4 mx-auto lg:py-6 md:px-1">
+        <div class="px-1 mb-10 md:text-center md:mb-16 text-center">
+         
+          <p
+          class="mb-2 text-2xl md:text-4xl font-bold text-black dark:text-white"
+        >
+         About Us
+        </p>
+        <p class="pb-2 text-lg text-gray-800 md:text-base dark:text-gray-300">
+          About Suspol Technologies Pvt. Ltd.
+        </p>
+          <div
+            class="flex w-32 mt-1 mb-6 overflow-hidden rounded md:mx-auto md:mb-14 mx-auto"
+          >
+            <div class="flex-1 h-2 bg-blue-200"></div>
+            <div class="flex-1 h-2 bg-blue-400"></div>
+            <div class="flex-1 h-2 bg-blue-300"></div>
+          </div>
+        </div>
+        <div class="flex flex-wrap">
+          <div class="w-full px-4 mb-10 lg:w-1/2 lg:mb-0">
+            <img
+              src="https://i.postimg.cc/j5L5bX2d/pexels-andrea-piacquadio-3757946.jpg"
+              alt=""
+              class="relative z-40 object-cover w-full h-96"
+            />
+          </div>
+          <div class="w-full px-4 mb-10 lg:w-1/2 lg:mb-0">
+            <h2
+              class="py-3 pl-2 mb-4 text-2xl font-bold text-gray-700 border-l-4 border-blue-500 dark:border-blue-400 dark:text-gray-300"
+            >
+              Empowering Change Through Innovation
+            </h2>
+            <p
+              class="mb-4 text-base leading-7 text-gray-500 dark:text-gray-400"
+            >
+              Suspol Technologies Pvt. Ltd. is a registered startup in India,
+              recognized by Startup India and DPIIT. Founded by Mr. Mriganka
+              Saha and Mrs. Pallavi Wahane, our company is dedicated to
+              developing sustainable technologies for industrial waste
+              management.
+            </p>
+            <ul class="mb-10">
+              <li
+                class="flex items-center mb-4 text-base text-gray-600 dark:text-gray-400"
+              >
+                <span class="mr-3 text-blue-500 dark:text-blue-400">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="w-5 h-5 bi bi-patch-check-fill"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z"
+                    />
+                  </svg>
+                </span>
+                <div>
+                  <b>Leadership Team :</b>
+                  <p>
+                    Meet the founders and leaders driving innovation at Suspol
+                    Technologies
+                  </p>
+                </div>
+              </li>
+              <li
+                class="flex items-center mb-4 text-base text-gray-600 dark:text-gray-400"
+              >
+                <span class="mr-3 text-blue-500 dark:text-blue-400">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="16"
+                    height="16"
+                    fill="currentColor"
+                    class="w-5 h-5 bi bi-patch-check-fill"
+                    viewBox="0 0 16 16"
+                  >
+                    <path
+                      d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z"
+                    />
+                  </svg>
+                </span>
+                <div>
+                  <b> Incubation at TBI KIIT Bhubaneswar :</b>
+                  <p>
+                    Currently incubated at TBI KIIT Bhubaneswar, we are at the
+                    forefront of technological advancements
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
-<br><b><h3>Key Highlights:</h3></b>
-<ul>
-<li><b> Leadership Team</b>: Meet the founders and leaders driving innovation at Suspol Technologies</li>
-<li><b> Incubation at TBI KIIT Bhubaneswar</b>: Currently incubated at TBI KIIT Bhubaneswar, we are at the forefront of technological advancements</li>
-</ul>
-</div>
-	</div>
-</div>
-<div class="teamsection">
-<div class="teamsectionheader">
-	<p style="text-align:center;font-size:24px;font-weight: bold;">Our Team</p>
-</div>
+    <section
+      class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20"
+    >
+      <div class="mx-auto mb-10 lg:max-w-xl md:mb-16 text-center">
+        <p
+          class="mb-2 text-2xl md:text-4xl font-bold text-black dark:text-white"
+        >
+          Discover Our Team
+        </p>
+        <p class="pb-2 text-lg text-gray-800 md:text-base dark:text-gray-300">
+          Meet the minds behind Suspol Technologies</b> Driven by Passion,Focused on Innovation
+        </p>
+        <div
+            class="flex w-32 mt-1 mb-6 overflow-hidden rounded md:mx-auto md:mb-14 mx-auto"
+          >
+            <div class="flex-1 h-2 bg-blue-200"></div>
+            <div class="flex-1 h-2 bg-blue-400"></div>
+            <div class="flex-1 h-2 bg-blue-300"></div>
+          </div>
+      </div>
+      <div
+        class="grid gap-10 mx-auto sm:grid-cols-2 lg:grid-cols-2 lg:max-w-screen-lg"
+      >
+        <div>
+          <div class="relative pb-56 mb-4 rounded shadow lg:pb-64">
+            <img
+              class="absolute object-cover w-full h-full rounded"
+              src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=3&amp;h=750&amp;w=1260"
+              alt="Person"
+            />
+          </div>
+          <div class="flex flex-col text-center">
+            <p class="text-lg font-bold">Mr. Mriganka Saha</p>
+            <p class="mb-5 text-xs text-gray-800">Founder</p>
+            <div class="flex items-center space-x-3 justify-center">
+              <a
+                href="/"
+                class="text-gray-600 transition-colors duration-300 hover:text-deep-purple-accent-400"
+              >
+                <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
+                  <path
+                    d="M24,4.6c-0.9,0.4-1.8,0.7-2.8,0.8c1-0.6,1.8-1.6,2.2-2.7c-1,0.6-2,1-3.1,1.2c-0.9-1-2.2-1.6-3.6-1.6 c-2.7,0-4.9,2.2-4.9,4.9c0,0.4,0,0.8,0.1,1.1C7.7,8.1,4.1,6.1,1.7,3.1C1.2,3.9,1,4.7,1,5.6c0,1.7,0.9,3.2,2.2,4.1 C2.4,9.7,1.6,9.5,1,9.1c0,0,0,0,0,0.1c0,2.4,1.7,4.4,3.9,4.8c-0.4,0.1-0.8,0.2-1.3,0.2c-0.3,0-0.6,0-0.9-0.1c0.6,2,2.4,3.4,4.6,3.4 c-1.7,1.3-3.8,2.1-6.1,2.1c-0.4,0-0.8,0-1.2-0.1c2.2,1.4,4.8,2.2,7.5,2.2c9.1,0,14-7.5,14-14c0-0.2,0-0.4,0-0.6 C22.5,6.4,23.3,5.5,24,4.6z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                href="/"
+                class="text-gray-600 transition-colors duration-300 hover:text-deep-purple-accent-400"
+              >
+                <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
+                  <path
+                    d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div>
+          <div class="relative pb-56 mb-4 rounded shadow lg:pb-64">
+            <img
+              class="absolute object-cover w-full h-full rounded"
+              src="https://images.pexels.com/photos/2381069/pexels-photo-2381069.jpeg?auto=compress&amp;cs=tinysrgb&amp;dpr=2&amp;h=750&amp;w=1260"
+              alt="Person"
+            />
+          </div>
+          <div class="flex flex-col text-center">
+            <p class="text-lg font-bold">Mrs. Pallavi Wahane</p>
+            <p class="mb-5 text-xs text-gray-800">Founder</p>
+            <div class="flex items-center space-x-3 justify-center">
+              <a
+                href="/"
+                class="text-gray-600 transition-colors duration-300 hover:text-deep-purple-accent-400"
+              >
+                <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
+                  <path
+                    d="M24,4.6c-0.9,0.4-1.8,0.7-2.8,0.8c1-0.6,1.8-1.6,2.2-2.7c-1,0.6-2,1-3.1,1.2c-0.9-1-2.2-1.6-3.6-1.6 c-2.7,0-4.9,2.2-4.9,4.9c0,0.4,0,0.8,0.1,1.1C7.7,8.1,4.1,6.1,1.7,3.1C1.2,3.9,1,4.7,1,5.6c0,1.7,0.9,3.2,2.2,4.1 C2.4,9.7,1.6,9.5,1,9.1c0,0,0,0,0,0.1c0,2.4,1.7,4.4,3.9,4.8c-0.4,0.1-0.8,0.2-1.3,0.2c-0.3,0-0.6,0-0.9-0.1c0.6,2,2.4,3.4,4.6,3.4 c-1.7,1.3-3.8,2.1-6.1,2.1c-0.4,0-0.8,0-1.2-0.1c2.2,1.4,4.8,2.2,7.5,2.2c9.1,0,14-7.5,14-14c0-0.2,0-0.4,0-0.6 C22.5,6.4,23.3,5.5,24,4.6z"
+                  ></path>
+                </svg>
+              </a>
+              <a
+                href="/"
+                class="text-gray-600 transition-colors duration-300 hover:text-deep-purple-accent-400"
+              >
+                <svg viewBox="0 0 24 24" fill="currentColor" class="h-5">
+                  <path
+                    d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+          </div>
+        </div>
+      
+      </div>
+    </section>
 
-<div class="teamsectioncontentheader">
-	<p style="text-align:center;font-size: 18px;";><b>Meet the minds behind Suspol Technologies</b> Driven by Passion,Focused on Innovation
-	</p>
-</div>
-<div class="teamsectionfounders">
-	<div class="teamsectionfoundersheader">
-		<b><p style="text-align:center ;font-size:20px;width: 160px;"> Our Founders</p></b>
-	</div>
-	<div class="teamsectionfounderscontent1">
-	<p><img src="C:\Users\Neha\Desktop\FRONTEND DEVELOPER\SUSPOL WEBSITE/tsports.jpg" height="200px" width="226px" style="border-radius: 50%;"><h3>Mr.Mriganka Saha</h3></p>
-</div>
-<div class="teamsectionfounderscontent2">
-	<p ><img src="C:\Users\Neha\Desktop\FRONTEND DEVELOPER\SUSPOL WEBSITE/tsports.jpg" height="200px" width="226px" style="border-radius: 50%;"><h3> Mrs. Pallavi Wahane</h3></p>
-</div>
-	</div>
-	<div class="teamsectionprofessionals">
-		<b><p style="text-align:center;font-size:20px;width: 160px;font-size: 20px;"> Dedicated Professionals</p></b>
-	</div>
-	<div class="teamsectionprofessionalsheader">
-		<p style="text-align:center;font-size: 18px";>A dynamic team of experts contributing to our success
-	</p>
-	</div>
-	<div class="teamsectionprofessionalscontent">
-	<div class="teamsectionprofessionalscontent1">
-		<p><img src="C:\Users\Neha\Desktop\FRONTEND DEVELOPER\SUSPOL WEBSITE/tsports.jpg" height="200px" width="226px" style="border-radius: 50%;"><h3 >PROF1</h3></p>
-	</div>
-	<div class="teamsectionprofessionalscontent1">
-		<p><img src="C:\Users\Neha\Desktop\FRONTEND DEVELOPER\SUSPOL WEBSITE/tsports.jpg" height="200px" width="226px" style="border-radius: 50%;"><h3>PROF2</h3></p>
-	</div>
-	<div class="teamsectionprofessionalscontent1">
-		<p><img src="C:\Users\Neha\Desktop\FRONTEND DEVELOPER\SUSPOL WEBSITE/tsports.jpg" height="200px" width="226px" style="border-radius: 50%;"><h3>PROF3</h3></p>
-	</div>
-	<div class="teamsectionprofessionalscontent1">
-		<p><img src="C:\Users\Neha\Desktop\FRONTEND DEVELOPER\SUSPOL WEBSITE/tsports.jpg" height="200px" width="226px" style="border-radius: 50%;"><h3>PROF4</h3></p>
-	</div>
-</div>
-</div>
-	
-
+    <!-- 
 	<div class="discover">
 		<div class="row1"><h2>Discover Our Innovative Approach</h2></div>
 		<div class="row2">
